external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_inside_fun.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:2:22
  │
2 │     fun specs_in_fun(x: u64, n: u64) {
  │                      ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:4:9
  │  
4 │ ╭         spec {
5 │ │             assume x > 42;
6 │ │         };
  │ ╰─────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:9:17
  │
9 │         while ({spec {assert x < 42;}; n < 64}) {
  │                 ^^^^^^^^^^^^^^^^^^^^^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:10:13
   │  
10 │ ╭             spec {
11 │ │                 assert x > 42;
12 │ │                 assert 0 < x;
13 │ │             };
   │ ╰─────────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:18:9
   │  
18 │ ╭         spec {
19 │ │             assert x > 42;
20 │ │         };
   │ ╰─────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:24:13
   │  
24 │ ╭             spec {
25 │ │                 assert x > 42;
26 │ │                 assert 0 < x;
27 │ │             };
   │ ╰─────────────^ Specification blocks are deprecated and are no longer used

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:9
   │
32 │         spec {} + 1;
   │         ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:9
   │
32 │         spec {} + 1;
   │         ^^^^^^^
   │         │
   │         Invalid argument to '+'
   │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E04007]: incompatible types
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:17
   │
32 │         spec {} + 1;
   │         ------- ^ - Found: integer. It is not compatible with the other type.
   │         │       │  
   │         │       Incompatible arguments to '+'
   │         Found: '()'. It is not compatible with the other type.

error[E04003]: built-in operation not supported
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:32:19
   │
32 │         spec {} + 1;
   │         -------   ^ Invalid argument to '+'
   │         │          
   │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:9
   │
33 │         spec {} && spec {};
   │         ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E04007]: incompatible types
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:9
   │
33 │         spec {} && spec {};
   │         ^^^^^^^ -- Expected: 'bool'
   │         │        
   │         Invalid argument to '&&'
   │         Given: '()'

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:20
   │
33 │         spec {} && spec {};
   │                    ^^^^^^^ Specification blocks are deprecated and are no longer used

error[E04007]: incompatible types
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:33:20
   │
33 │         spec {} && spec {};
   │                 -- ^^^^^^^
   │                 │  │
   │                 │  Invalid argument to '&&'
   │                 │  Given: '()'
   │                 Expected: 'bool'

error[E04004]: expected a single non-reference type
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:34:9
   │
34 │         &mut spec {};
   │         ^^^^^^^^^^^^
   │         │    │
   │         │    Expected a single non-reference type, but found: '()'
   │         Invalid borrow

warning[W00001]: DEPRECATED. will be removed
   ┌─ tests/move_check/parser/spec_parsing_inside_fun.move:34:14
   │
34 │         &mut spec {};
   │              ^^^^^^^ Specification blocks are deprecated and are no longer used
